--- a/DiscordBotCore/packages.config
+++ b/DiscordBotCore/packages.config
@@ -3,5 +3,17 @@
   <package id="DSharpPlus" version="3.2.3" targetFramework="net461" />
   <package id="DSharpPlus.CommandsNext" version="3.2.3" targetFramework="net461" />
   <package id="DSharpPlus.VoiceNext" version="3.2.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EntityFramework.de" version="6.2.0" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="MySql.Data" version="8.0.13" targetFramework="net461" />
+  <package id="MySql.Data.EntityFramework" version="8.0.13" targetFramework="net461" />
+  <package id="MySql.Web" version="8.0.13" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="WebMatrix.WebData" version="2.0.30506.0" targetFramework="net461" />
 </packages>
