Wisdom befehle gewrapped

--- a/BotService/App.config
+++ b/BotService/App.config
@@ -5,6 +5,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
+  <appSettings>
+    <add key="discordbot:wisdomcommand:weather:apikey" value="004b5e704d1ceb81a5d45fc5ff2f342b" />
+    <add key="discordbot:wisdomcommand:weather:metric" value="metric" />
+    <add key="discordbot:wisdomcommand:giphy:apikey" value="dc6zaTOxFJmzC" />
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
