--- a/TestConsole/App.config
+++ b/TestConsole/App.config
@@ -7,6 +7,11 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+  <appSettings>
+    <add key="discordbot:wisdomcommand:weather:apikey" value="004b5e704d1ceb81a5d45fc5ff2f342b" />
+    <add key="discordbot:wisdomcommand:weather:metric" value="metric" />
+    <add key="discordbot:wisdomcommand:giphy:apikey" value="dc6zaTOxFJmzC" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
