--- a/DiscordBotCore/DiscordBotCore.csproj
+++ b/DiscordBotCore/DiscordBotCore.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Commands\LoveCommands.cs" />
     <Compile Include="Commands\RandomCommands.cs" />
     <Compile Include="Commands\WisdomCommand.cs" />
+    <Compile Include="Controller\ApiController.cs" />
     <Compile Include="Entities\DiscordBotModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -132,6 +133,7 @@
       <DependentUpon>DiscordBotModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Configuration.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Entities\DiscordBotModel.Context.tt">
