Ordner App_Data mit SubOrdner Pokemon, Inhalt Pkmn-pngs bis #040 in DiscordBotModel.edmx

--- a/BotService/BotService.csproj
+++ b/BotService/BotService.csproj
@@ -103,5 +103,8 @@
       <Name>DiscordBotCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\Pokemon\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
