--- a/DiscordBotCore/DiscordBotCore.csproj
+++ b/DiscordBotCore/DiscordBotCore.csproj
@@ -125,6 +125,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DiscordBotModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Entities\PokeNames.cs">
+      <DependentUpon>DiscordBotModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Handler\ChannelHandler.cs" />
     <Compile Include="Commands\VoiceCommands.cs" />
     <Compile Include="IWillCommand.cs" />
