--- a/DiscordBotCore/DiscordBotCore.csproj
+++ b/DiscordBotCore/DiscordBotCore.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\LoveCommands.cs" />
+    <Compile Include="Commands\PokeCommands.cs" />
     <Compile Include="Commands\RandomCommands.cs" />
     <Compile Include="Commands\WisdomCommand.cs" />
     <Compile Include="Controller\ApiController.cs" />
@@ -137,6 +138,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorys\LovePhraseRepository.cs" />
+    <Compile Include="Repositorys\PokemonRepository.cs" />
     <Compile Include="Repositorys\Repository.cs" />
     <Compile Include="Util\Configuration.cs" />
   </ItemGroup>
