--- a/DiscordBotCore/DiscordBotCore.csproj
+++ b/DiscordBotCore/DiscordBotCore.csproj
@@ -112,6 +112,8 @@
     <Compile Include="Commands\RandomCommands.cs" />
     <Compile Include="Commands\WisdomCommand.cs" />
     <Compile Include="Controller\ApiController.cs" />
+    <Compile Include="Controller\PokeController.cs" />
+    <Compile Include="Controller\RandomController.cs" />
     <Compile Include="Entities\DiscordBotModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
